--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 /* Header style****************************** */
 .header {
     background-color: #181C14;
+    padding: 7px;
 }
 
 .nav {
@@ -71,6 +72,7 @@ a{
     height: 50px;
     color: #ECDFCC;
     background-color: #181C14;
+    display: none;
 }
 .btnmenu1{
     width: 30%;
@@ -91,7 +93,7 @@ a{
     width: 25%;
     height: auto;
     text-align: center;
-    display: none;
+    /* display: none; */
     /* background-color: #181C14; */
     background: linear-gradient(360deg, #181C14, #697565);
 }
@@ -135,6 +137,12 @@ a{
 }
 
 .aside_btnupdn {
+    width: 47%;
+    padding: 5px;
+    color: #ECDFCC;
+    background-color: #181C14;
+}
+.aside_btnupdn1 {
     width: 97%;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -144,38 +152,33 @@ a{
 }
 
 .aside_fontbtn {
-    margin-top: 10px;
-    margin-bottom: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .aside_btnB {
-    width:90%;
+    width:40%;
     padding: 5px;
-    margin: 2% 0%;
     color: #ECDFCC;
     background-color: #181C14;
 }
 
 .aside_btnI {
-    width:90%;
+    width:40%;
     padding: 5px;
-    margin: 2% 0%;
     color: #ECDFCC;
     background-color: #181C14;
 }
 
 .aside_btnU {
-    width:90%;
+    width:40%;
     padding: 5px;
-    margin: 2% 0%;
     color: #ECDFCC;
     background-color: #181C14;
 }
 
 .aside_btns {
-    width:  90%;
+    width:  40%;
     padding: 5px;
     margin: 2% 0%;
     color: #ECDFCC;
@@ -236,14 +239,15 @@ a{
 
 .text_area {
     width: 100%;
-    height: 520px;
+    /* height: 520px; */
     padding: 15px;
-    font-size: x-large;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
     background-color: #fff;
     box-shadow: 5px 5px 10px 1px black;
     outline: none;
     resize: none;
-    overflow-y: scroll; 
+    overflow-y: scroll;
 }
 .aside_textedit::-webkit-scrollbar{
     width: 10px;
@@ -294,6 +298,7 @@ a{
     }
     .btnmenu{
         width: 40%;
+        display: block;
     }
     .btnmenu1{
         width: 40%;
@@ -308,7 +313,7 @@ a{
     }
     .text_area {
         width: 100%;
-        height: 550px;
+        /* height: 530px; */
         padding: 5px;
         margin: 2px;
     }
@@ -367,7 +372,7 @@ a{
     }
     .text_area {
         width: 100%;
-        height: 550px;
+        /* height: 530px; */
         padding: 5px;
         margin: 2px;
     }
@@ -406,8 +411,8 @@ a{
     }
     .text_area {
         width: 100%;
-        height: 455px;
-        font-size: x-large;
+        /* height: 440px; */
+        font-size: 20px;
         background-color: #fff;
         box-shadow: 5px 5px 10px 1px black;
         outline: none;
@@ -429,15 +434,15 @@ a{
         width: 10px;
     }
     .aside_textedit::-webkit-scrollbar-track{
-        background: #697565;
+        background: #ffffff;
     }
     .aside_textedit::-webkit-scrollbar-thumb{
-        background-color: #181C14;
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
+        background-color: #010200;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
 }
     .aside_divfonts {
         width: 100%;
@@ -563,8 +568,8 @@ a{
     }
     .text_area {
         width: 100%;
-        height: 455px;
-        font-size: x-large;
+        /* height: 440px; */
+        font-size: 20px;
         background-color: #fff;
         box-shadow: 5px 5px 10px 1px black;
         outline: none;
@@ -577,7 +582,7 @@ a{
         background-color: #181C14;
     }
     .aside_textedit {
-        height: 100px;
+        /* height: 100px; */
         padding: 5px;
         text-align: center;
         overflow-y: scroll;
@@ -586,15 +591,15 @@ a{
         width: 10px;
     }
     .aside_textedit::-webkit-scrollbar-track{
-        background: #697565;
+        background: #ffffff;
     }
     .aside_textedit::-webkit-scrollbar-thumb{
-        background-color: #181C14;
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
+        background-color: #010200;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
 }
     .aside_divfonts {
         width: 100%;
