--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     overflow-x: hidden;
     /* background-color: #697565; */
 }
+.aside_btnI:hover,.aside_btnB:hover,.aside_btnU:hover,.aside_btnupdn:hover{
+    background-color: #2c2c08f8;
+}
+.aside_fonts:hover,
+.aside_fontsize:hover,
+.aside_fontsize:hover,
+.aside_fonttype:hover{
+    /* color: #000; */
+    background-color: #2c2c08f8;
+
+}
 .editeading{
     color: yellow;
 }
@@ -240,6 +251,18 @@ a{
     display: flex;
     justify-content: center;
     background: linear-gradient(360deg, #181C14, #697565);
+}
+
+.btndownload{
+    width: 90%;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #181C14;
+    &:hover{
+        background-color: #ce0000;
+    }
 }
 
 .text_area {
